--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="D:\WT Assignment\iPortfolio\iPortfolio\20220312160921_IMG_9958 (1).jpg" alt="" class="img-fluid rounded-circle">
+        <img src="img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Rohit Gollar</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/rohit.gollar.35/" target="_blank" class="facebook"><i class="bx bxl-facebook"> </i></a>
@@ -89,7 +89,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="D:\WT Assignment\iPortfolio\iPortfolio\20220312160921_IMG_9958 (1).jpg" class="img-fluid" alt="">
+            <img src="img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3> Web Developer.</h3><br>
@@ -194,7 +194,7 @@
         <div class="col-lg-6">
           <div id="hover_chang" class="service_box">
             <p><u><h3>Website Development (Anime)</h3></u>
-            <i><img src="D:\WT Assignment\iPortfolio\iPortfolio\Shinchan Animation - Google Chrome 06-11-2022 01_23_35.png"  class="align-items-center" width="650" height="300" alt="#"></i>
+            <i><img src="Shinchan.png"  class="align-items-center" width="650" height="300" alt="#"></i>
         </div><br><br>
 
     </section><!-- End Services Section -->
